--- a/html/css/style.scss
+++ b/html/css/style.scss
@@ -445,7 +445,7 @@
             gap: 40px;
 
             .help_card {
-                width: calc(100% / 4 - 0px);
+                width: calc(100% / 3 - 80px / 3);
                 padding: 20px 33px 25px 33px;
                 border-radius: 12px;
                 background: #FFF;
