--- a/html/css/parts/_media.scss
+++ b/html/css/parts/_media.scss
@@ -863,6 +863,10 @@
                 font-weight: 700;
                 line-height: 27px;
             }
+
+            .index_news_link {
+                display: none;
+            }
         }
     }
 
