--- a/html/css/style.css
+++ b/html/css/style.css
@@ -2712,6 +2712,26 @@ textarea[type=text]:focus {
     font-weight: 700;
     line-height: 27px;
   }
+  .accident .main_container h2 {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 4px;
+  }
+  .accident .main_container p {
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+  }
+  .assistance .main_container h2 {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 45px;
+  }
 }
 @media only screen and (max-width: 773px) {
   .services_history {
