--- a/html/css/parts/_media.scss
+++ b/html/css/parts/_media.scss
@@ -550,6 +550,36 @@
             }
         }
     }
+
+    .accident {
+        .main_container {
+            h2 {
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+                margin-bottom: 4px;
+            }
+            p {
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 18px;
+            }
+        }
+    }
+
+    .assistance {
+        .main_container {
+            h2 {
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+                margin-bottom: 45px;
+            }
+        }
+    }
 }
 
 
