--- a/html/css/parts/_media.scss
+++ b/html/css/parts/_media.scss
@@ -552,6 +552,7 @@
     }
 
     .accident {
+        padding: 60px 0 90px 0;
         .main_container {
             h2 {
                 font-size: 20px;
